RESOLVED FIXED237043
[WebAuthn] userHandle not marked nullable in _WKWebAuthenticationAssertionResponse
https://bugs.webkit.org/show_bug.cgi?id=237043
Summary [WebAuthn] userHandle not marked nullable in _WKWebAuthenticationAssertionRes...
pascoe@apple.com
Reported 2022-02-22 09:42:27 PST
This is causing issues where the userHandle is actually null. This is allowed by the WebAuthn spec: https://www.w3.org/TR/webauthn-2/#dom-authenticatorassertionresponse-userhandle
Attachments
Patch (7.28 KB, patch)
2022-02-22 10:18 PST, pascoe@apple.com
no flags
Patch (10.03 KB, patch)
2022-02-22 13:58 PST, pascoe@apple.com
no flags
Patch (17.12 KB, patch)
2022-02-22 14:49 PST, pascoe@apple.com
no flags
pascoe@apple.com
Comment 1 2022-02-22 09:42:44 PST
pascoe@apple.com
Comment 2 2022-02-22 10:18:41 PST
pascoe@apple.com
Comment 3 2022-02-22 13:58:58 PST
pascoe@apple.com
Comment 4 2022-02-22 14:47:57 PST
pascoe@apple.com
Comment 5 2022-02-22 14:49:19 PST
Brent Fulgham
Comment 6 2022-02-23 10:00:21 PST
Comment on attachment 452904 [details] Patch r=me
EWS
Comment 7 2022-02-23 10:21:16 PST
Committed r290381 (247696@main): <https://commits.webkit.org/247696@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 452904 [details].
Note You need to log in before you can comment on or make changes to this bug.