[WebAuthn] userHandle not marked nullable in _WKWebAuthenticationAssertionResponse https://bugs.webkit.org/show_bug.cgi?id=237043 rdar://89317740

Reviewed by Brent Fulgham.

Source/WebCore:

The userHandle is a nullable field on UserEntity. This patch changes
various API/SPI to allow passing null userHandle.

* Modules/webauthn/AuthenticatorAssertionResponse.cpp:
(WebCore::AuthenticatorAssertionResponse::create):
(WebCore::AuthenticatorAssertionResponse::AuthenticatorAssertionResponse):
* Modules/webauthn/AuthenticatorAssertionResponse.h:

Source/WebKit:

The userHandle is a nullable field on UserEntity. This patch changes
various API/SPI to allow passing null userHandle.

* Platform/spi/Cocoa/AuthenticationServicesCoreSPI.h:
Update forward declared SPI, reflecting userHandle as nullable.
* UIProcess/API/Cocoa/_WKAuthenticatorAssertionResponseInternal.h:
* UIProcess/API/Cocoa/_WKWebAuthenticationAssertionResponse.h:
Update userHandle property to null.
* UIProcess/API/Cocoa/_WKWebAuthenticationPanel.mm:
(getAllLocalAuthenticatorCredentialsImpl):
* UIProcess/WebAuthentication/Cocoa/LocalAuthenticator.mm:
(WebKit::LocalAuthenticatorInternal::getExistingCredentials):

Tools:

Create tests to check for null userHandle.

* TestWebKitAPI/Tests/WebKitCocoa/_WKWebAuthenticationPanel.mm:
(TestWebKitAPI::TEST):



Canonical link: https://commits.webkit.org/247696@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290381 268f45cc-cd09-0410-ab3c-d52691b4dbfc